[package]
name = "sysfs-rs"
version = "0.0.13-pre"
authors = ["Brian Martin <brayniac@gmail.com>"]

license = "MIT OR Apache-2.0"

description = "rust lib for interacting with sysfs"

homepage = "https://github.com/brayniac/sysfs-rs"
documentation = "https://brayniac.github.io/sysfs-rs"
repository = "https://github.com/brayniac/sysfs-rs"

readme = "README.md"

keywords = [ "sysfs" ]

categories = []

[dependencies]
bit-vec = "0.4.3"
